Add watchdog to makefile

--- a/ruuvi_examples/eddystone/ruuvitag_b/s132/armgcc/Makefile
+++ b/ruuvi_examples/eddystone/ruuvitag_b/s132/armgcc/Makefile
@@ -27,6 +27,7 @@ SRC_FILES += \
   $(PROJ_DIR)/../../drivers/lis2dh12/lis2dh12.c \
   $(PROJ_DIR)/../../drivers/pwm/pwm.c \
   $(PROJ_DIR)/../../drivers/spi/spi.c \
+  $(PROJ_DIR)/../../drivers/nrf_nordic_watchdog/watchdog.c \
   $(PROJ_DIR)/../../libraries/ruuvi_sensor_formats/ruuvi_endpoints.c \
   $(SDK_ROOT)/components/libraries/log/src/nrf_log_backend_serial.c \
   $(SDK_ROOT)/components/libraries/log/src/nrf_log_frontend.c \
@@ -117,6 +118,7 @@ INC_FOLDERS += \
   $(PROJ_DIR)/../../drivers/init/ \
   $(PROJ_DIR)/../../drivers/nrf_nordic_pininterrupt/ \
   $(PROJ_DIR)/../../drivers/pwm/ \
+  $(PROJ_DIR)/../../drivers/nrf_nordic_watchdog/ \
   $(PROJ_DIR)/../../libraries/data_structures/ \
   $(PROJ_DIR)/../../libraries/dsp/ \
   $(PROJ_DIR)/../../libraries/ruuvi_sensor_formats/ \
