--- a/.gitignore
+++ b/.gitignore
@@ -34,25 +34,29 @@ ui_*.h
 *.includes
 
 
-#QtCtreator Qml
+# QtCreator Qml
 
 *.qmlproject.user
 *.qmlproject.user.*
 
 # Private data
+
 keys
 
 # Build directories
 
 _build
 
-#VisualGDB Makefile
+# VisualGDB Makefile
+
 nrf5x.mak
 
-#MacOS Junk
+# MacOS Junk
+
 .DS_Store
 
-#SDKs
+# SDKs
+
 nRF52_SDK_0.9.2_dbc28c9
 nRF52_SDK_0.9.2_dbc28c9.zip
 nRF5_SDK_11.0.0-2.alpha_bc3f6a0
