Add NFC current consumption fix to Eddystone

--- a/ruuvi_examples/eddystone/ruuvitag_b/s132/armgcc/Makefile
+++ b/ruuvi_examples/eddystone/ruuvitag_b/s132/armgcc/Makefile
@@ -263,6 +263,7 @@ CFLAGS += -DNRF52_PAN_64
 CFLAGS += -DSOFTDEVICE_PRESENT
 CFLAGS += -DBOARD_CUSTOM
 CFLAGS += -DBOARD_RUUVITAG_B
+CFLAGS += -DHAL_NFC_ENGINEERING_BC_FTPAN_WORKAROUND
 CFLAGS += -DNRF52832
 CFLAGS += -DNRF_LOG_USES_RTT=1
 CFLAGS += -DNRF_DFU_SETTINGS_VERSION=1
@@ -302,7 +303,9 @@ ASMFLAGS += -x assembler-with-cpp
 ASMFLAGS += -DNRF52
 ASMFLAGS += -DNRF52_PAN_64
 ASMFLAGS += -DSOFTDEVICE_PRESENT
-ASMFLAGS += -DBOARD_PCA10040
+ASMFLAGS += -DBOARD_CUSTOM
+ASMFLAGS += -DBOARD_RUUVITAG_B
+ASMFLAGS += -DHAL_NFC_ENGINEERING_BC_FTPAN_WORKAROUND
 ASMFLAGS += -DNRF52832
 ASMFLAGS += -DNRF_LOG_USES_RTT=1
 ASMFLAGS += -DNRF_DFU_SETTINGS_VERSION=1
